--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>josm-ods-arcgis</groupId>
   <artifactId>josm-ods-arcgis</artifactId>
-  <version>0.4.1</version>
+  <version>0.5.0-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -19,8 +19,8 @@
   <dependencies>
   	<dependency>
   		<groupId>josm-plugins</groupId>
-  		<artifactId>openservices</artifactId>
-  		<version>0.4.4</version>
+  		<artifactId>opendataservices</artifactId>
+  		<version>0.5.0</version>
   	</dependency>
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
